Add searchbar new

--- a/about_us.html
+++ b/about_us.html
@@ -169,7 +169,7 @@
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
                 <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                        class="img-fluid"></a>
+                        class="img-fluid" loading="lazy"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -194,8 +194,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                        class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                        class="img-fluid"  loading="lazy"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -231,10 +231,10 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/banner_1.jpeg" class="d-block w-100" alt="banner_1">
+                    <img src="./assets/img/banner_1.jpeg" class="d-block w-100" alt="banner_1"  loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="banner_2">
+                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="banner_2"  loading="lazy">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -288,7 +288,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"  loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
