--- a/birthday_gifts.html
+++ b/birthday_gifts.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -233,7 +233,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/60843.webp" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/60843.webp" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -246,7 +246,7 @@
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
                             <a href="#"><img src="./assets/img/birthday_gifts/money-saving box.jpg" alt="#"
-                                    class="img-fluid"></a>
+                                    class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -258,7 +258,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/bottal.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/bottal.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -270,7 +270,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/download.jpeg" alt="#"
+                            <a href="#"><img src="./assets/img/birthday_gifts/download.jpeg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -291,7 +291,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/chocolate.webp" alt="#"
+                            <a href="#"><img src="./assets/img/birthday_gifts/chocolate.webp" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -304,7 +304,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/personalized-happy-birthday.jpg" alt="#"
+                            <a href="#"><img src="./assets/img/birthday_gifts/personalized-happy-birthday.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -317,7 +317,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/jacket.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/jacket.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -329,7 +329,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/cap.webp" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/cap.webp" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -349,7 +349,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/bag.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/bag.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -362,7 +362,7 @@
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
                             <a href="#"><img src="./assets/img/birthday_gifts/chocolate1.jpg" alt="#"
-                                    class="img-fluid"></a>
+                                    class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -374,7 +374,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/mug1.jpeg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/mug1.jpeg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -387,7 +387,7 @@
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
                             <a href="#"><img src="./assets/img/birthday_gifts/bottal1.webp" alt="#"
-                                    class="img-fluid"></a>
+                                    class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -413,7 +413,7 @@
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="staticBackdropLabel">
                         <a href="index.html">
-                            <img src="./assets/img/logo.png" width="150px" alt="" class="img-fluid">
+                            <img src="./assets/img/logo.png" width="150px" alt="logo" class="img-fluid" loading="lazy">
                         </a>
                     </h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -437,8 +437,8 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                                class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo"
+                                class="img-fluid pb-4" loading="lazy"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
