--- a/board_game.html
+++ b/board_game.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -237,16 +237,16 @@
             <div class="row">
                 <div class="col-lg-6 pt-4">
                     <img src="./assets/img/Products img/Edited/F400/3.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay">
+                        class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F400/3.jpg" class="thumb-img active"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F400/B1.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F400/2.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F400/A4.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -309,16 +309,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F401/5.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay1">
+                        class="img-fluid mainProductImage" id="mainDisplay1" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F401/5.jpg" class="thumb-img active"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F401/1.jpg" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F401/2.jpg" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F401/3.jpg" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -382,16 +382,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F402/1.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay2">
+                        class="img-fluid mainProductImage" id="mainDisplay2" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F402/1.jpg" class="thumb-img active"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F402/3.jpg" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F402/5.jpg" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F402/7.jpg" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -453,16 +453,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F403/1.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay3">
+                        class="img-fluid mainProductImage" id="mainDisplay3" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F403/1.jpg" class="thumb-img active"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F403/2.jpg" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F403/3.jpg" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F403/4.jpg" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -523,16 +523,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F404/1.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay4">
+                        class="img-fluid mainProductImage" id="mainDisplay4" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F404/1.jpg" class="thumb-img active"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F404/2.jpg" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F404/3.jpg" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F404/5.jpg" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -594,16 +594,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F405/1.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay5">
+                        class="img-fluid mainProductImage" id="mainDisplay5" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F405/1.jpg" class="thumb-img active"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F405/2.jpg" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F405/4.jpg" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F405/8.jpg" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -665,16 +665,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F406/1.png" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay6">
+                        class="img-fluid mainProductImage" id="mainDisplay6" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F406/1.png" class="thumb-img active"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F406/2.png" class="thumb-img"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F406/3.png" class="thumb-img"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F406/4.png" class="thumb-img"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -737,16 +737,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F407/1.jpg" alt="board_1"
-                        class="img-fluid mainProductImage" id="mainDisplay7">
+                        class="img-fluid mainProductImage" id="mainDisplay7" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F407/1.jpg" class="thumb-img active"
-                            onclick="changeImage7(this)" onmouseover="changeImage7(this)">
+                            onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F407/2.jpg" class="thumb-img"
-                            onclick="changeImage7(this)" onmouseover="changeImage7(this)">
+                            onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F407/5.jpg" class="thumb-img"
-                            onclick="changeImage7(this)" onmouseover="changeImage7(this)">
+                            onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F407/6.jpg" class="thumb-img"
-                            onclick="changeImage7(this)" onmouseover="changeImage7(this)">
+                            onclick="changeImage7(this)" onmouseover="changeImage7(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -815,7 +815,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="staticBackdropLabel">
-                        <img src="./assets/img/logo.png" width="150px" alt="" class="img-fluid">
+                        <img src="./assets/img/logo.png" width="150px" alt="log" loading="lazy" class="img-fluid">
                     </h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -838,7 +838,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
