--- a/baby_toy.html
+++ b/baby_toy.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -237,16 +237,16 @@
             <div class="row">
                 <div class="col-lg-6 pt-4">
                     <img src="./assets/img/baby/baby_1.webp" alt="baby_1" class="img-fluid mainProductImage"
-                        id="mainDisplay">
+                        id="mainDisplay" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/baby/baby_1.webp" class="thumb-img active" onclick="changeImage(this)"
-                            onmouseover="changeImage(this)">
+                            onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/baby/baby_1_1.webp" class="thumb-img" onclick="changeImage(this)"
-                            onmouseover="changeImage(this)">
+                            onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/baby/baby_1_2.webp" class="thumb-img" onclick="changeImage(this)"
-                            onmouseover="changeImage(this)">
+                            onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/baby/baby_1_3.jpg" class="thumb-img" onclick="changeImage(this)"
-                            onmouseover="changeImage(this)">
+                            onmouseover="changeImage(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -308,7 +308,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="staticBackdropLabel">
-                        <img src="./assets/img/logo.png" width="150px" alt="" class="img-fluid">
+                        <img src="./assets/img/logo.png" width="150px" alt="logo" loading="lazy" class="img-fluid">
                     </h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -331,7 +331,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
