--- a/building_blocks.html
+++ b/building_blocks.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -237,16 +237,16 @@
             <div class="row">
                 <div class="col-lg-6 pt-4">
                     <img src="./assets/img/building/building_1.webp" alt="building_1" class="img-fluid mainProductImage"
-                        id="mainDisplay">
+                        id="mainDisplay" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/building/building_1.webp" class="thumb-img active"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/building/building_1_1.jpg" class="thumb-img" onclick="changeImage(this)"
-                            onmouseover="changeImage(this)">
+                            onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/building/building_1_2.webp" class="thumb-img" onclick="changeImage(this)"
-                            onmouseover="changeImage(this)">
+                            onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/building/building_1_3.webp" class="thumb-img" onclick="changeImage(this)"
-                            onmouseover="changeImage(this)">
+                            onmouseover="changeImage(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -306,16 +306,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/building/building_2.webp" alt="building_1" class="img-fluid mainProductImage"
-                        id="mainDisplay1">
+                        id="mainDisplay1" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/building/building_2.webp" class="thumb-img active"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/building/building_2_1.jpg" class="thumb-img" onclick="changeImage1(this)"
-                            onmouseover="changeImage1(this)">
+                            onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/building/building_2_2.webp" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/building/building_2_3.webp" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -377,16 +377,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/building/building_3.webp" alt="building_1" class="img-fluid mainProductImage"
-                        id="mainDisplay2">
+                        id="mainDisplay2" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/building/building_3.webp" class="thumb-img active"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/building/building_3_1.jpg" class="thumb-img" onclick="changeImage2(this)"
-                            onmouseover="changeImage2(this)">
+                            onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/building/building_3_2.webp" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/building/building_3_3.webp" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -447,16 +447,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/building/building_4.webp" alt="building_1" class="img-fluid mainProductImage"
-                        id="mainDisplay3">
+                        id="mainDisplay3" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/building/building_4.webp" class="thumb-img active"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/building/building_4_1.jpg" class="thumb-img" onclick="changeImage3(this)"
-                            onmouseover="changeImage3(this)">
+                            onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/building/building_4_2.webp" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/building/building_4_3.webp" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -518,16 +518,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/building/building_5.webp" alt="building_1" class="img-fluid mainProductImage"
-                        id="mainDisplay4">
+                        id="mainDisplay4" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/building/building_5.webp" class="thumb-img active"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/building/building_5_1.jpg" class="thumb-img" onclick="changeImage4(this)"
-                            onmouseover="changeImage4(this)">
+                            onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/building/building_5_2.webp" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/building/building_5_3.webp" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -588,16 +588,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/building/building_6.webp" alt="building_1" class="img-fluid mainProductImage"
-                        id="mainDisplay5">
+                        id="mainDisplay5" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/building/building_6.webp" class="thumb-img active"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/building/building_6_1.jpg" class="thumb-img" onclick="changeImage5(this)"
-                            onmouseover="changeImage5(this)">
+                            onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/building/building_6_2.webp" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/building/building_6_3.webp" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -666,7 +666,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="staticBackdropLabel">
-                        <img src="./assets/img/logo.png" width="150px" alt="" class="img-fluid">
+                        <img src="./assets/img/logo.png" width="150px"  alt="logo" loading="lazy" class="img-fluid">
                     </h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -688,7 +688,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
