--- a/building_blocks_with.html
+++ b/building_blocks_with.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -237,17 +237,17 @@
             <div class="row">
                 <div class="col-lg-6 pt-4">
                     <img src="./assets/img/Products img/Edited/F107A/1.webp" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay">
+                        class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F107A/1.webp" class="thumb-img active"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F107A/2.webp" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F107A/3.webp" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <a href="#" role="button" data-bs-toggle="modal" data-bs-target="#youtube1">
                             <img src="./assets/img/Products img/Edited/F107A/4.webp" class="thumb-img "
-                                onclick="changeImage(this)" onmouseover="changeImage(this)">
+                                onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         </a>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
