--- a/corporate_gifts.html
+++ b/corporate_gifts.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -233,7 +233,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/bag.webp" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/bag.webp" alt="#" loading="lazy" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -245,7 +245,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/bottles.jpeg" alt="#"
+                            <a href="#"><img src="./assets/img/corporate_img/bottles.jpeg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -258,7 +258,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/cap.webp" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/cap.webp" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -270,7 +270,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/Mug.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/Mug.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -290,7 +290,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/T-shirt.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/T-shirt.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -302,7 +302,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/mug1.webp" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/mug1.webp" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -314,7 +314,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/bag.webp" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/bag.webp" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -326,7 +326,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/Trophy.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/Trophy.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -347,7 +347,7 @@
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
                             <a href="#"><img src="./assets/img/corporate_img/bottles1.jpg" alt="#"
-                                    class="img-fluid"></a>
+                                    class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -359,7 +359,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/shirt.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/shirt.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -371,7 +371,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/cap1.jpg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/cap1.jpg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -383,7 +383,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/corporate_img/jacket.jpeg" alt="#" class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/corporate_img/jacket.jpeg" alt="#" class="img-fluid" loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -409,7 +409,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
