--- a/educational_toy.html
+++ b/educational_toy.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -237,17 +237,17 @@
             <div class="row">
                 <div class="col-lg-6 pt-4">
                     <img src="./assets/img/Products img/Edited/F300/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay">
+                        class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F300/1.jpg" class="thumb-img active"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F300/2.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F300/3.jpg" class="thumb-img"
-                            onclick="changeImage(this)" onmouseover="changeImage(this)">
+                            onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <a href="#" role="button" data-bs-toggle="modal" data-bs-target="#youtube1">
                             <img src="./assets/img/Products img/Edited/F300/1.jpg" class="thumb-img "
-                                onclick="changeImage(this)" onmouseover="changeImage(this)">
+                                onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         </a>
                     </div>
                 </div>
@@ -333,16 +333,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F301/A1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay1">
+                        class="img-fluid mainProductImage" id="mainDisplay1" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F301/A1.jpg" class="thumb-img active"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F301/A2.jpg" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F301/A3.jpg" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F301/AA11.jpg" class="thumb-img"
-                            onclick="changeImage1(this)" onmouseover="changeImage1(this)">
+                            onclick="changeImage1(this)" onmouseover="changeImage1(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -406,16 +406,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F302/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay2">
+                        class="img-fluid mainProductImage" id="mainDisplay2" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F302/1.jpg" class="thumb-img active"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F302/2.jpg" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F302/3.jpg" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F302/4.jpg" class="thumb-img"
-                            onclick="changeImage2(this)" onmouseover="changeImage2(this)">
+                            onclick="changeImage2(this)" onmouseover="changeImage2(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -477,16 +477,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F303A/2.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay3">
+                        class="img-fluid mainProductImage" id="mainDisplay3" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F303A/2.jpg" class="thumb-img active"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F303A/3.jpg" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F303A/4.jpg" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F303A/5.jpg" class="thumb-img"
-                            onclick="changeImage3(this)" onmouseover="changeImage3(this)">
+                            onclick="changeImage3(this)" onmouseover="changeImage3(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -548,16 +548,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F304/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay4">
+                        class="img-fluid mainProductImage" id="mainDisplay4" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F304/1.jpg" class="thumb-img active"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F304/2.png" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F304/3.png" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F304/4.jpg" class="thumb-img"
-                            onclick="changeImage4(this)" onmouseover="changeImage4(this)">
+                            onclick="changeImage4(this)" onmouseover="changeImage4(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -620,16 +620,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F305/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay5">
+                        class="img-fluid mainProductImage" id="mainDisplay5" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F305/1.jpg" class="thumb-img active"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F305/2.jpg" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F305/3.jpg" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F305/4.jpg" class="thumb-img"
-                            onclick="changeImage5(this)" onmouseover="changeImage5(this)">
+                            onclick="changeImage5(this)" onmouseover="changeImage5(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -693,16 +693,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <img src="./assets/img/Products img/Edited/F306/1.jpg" alt="education_1"
-                        class="img-fluid mainProductImage" id="mainDisplay6">
+                        class="img-fluid mainProductImage" id="mainDisplay6" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
                         <img src="./assets/img/Products img/Edited/F306/1.jpg" class="thumb-img active"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F306/2.jpg" class="thumb-img"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F306/3.jpg" class="thumb-img"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                         <img src="./assets/img/Products img/Edited/F306/4.jpg" class="thumb-img"
-                            onclick="changeImage6(this)" onmouseover="changeImage6(this)">
+                            onclick="changeImage6(this)" onmouseover="changeImage6(this)" loading="lazy">
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
@@ -774,7 +774,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
