--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                             class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
@@ -168,7 +168,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -194,7 +194,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                         class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
@@ -230,10 +230,10 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/banner_3.jpeg" class="d-block w-100" alt="banner_1">
+                    <img src="./assets/img/banner_3.jpeg" class="d-block w-100" alt="banner_1" loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="banner_2">
+                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="banner_2" loading="lazy">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -261,7 +261,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="magic_beans.html"><img src="./assets/img/home_game-1.jpg" alt="#"
+                            <a href="magic_beans.html"><img src="./assets/img/home_game-1.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -274,7 +274,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="triggle_chess.html"><img src="./assets/img/home_game-2.jpg" alt="#"
+                            <a href="triggle_chess.html"><img src="./assets/img/home_game-2.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -287,7 +287,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="xylophone_musical.html"><img src="./assets/img/3.jpeg" alt="#"
+                            <a href="xylophone_musical.html"><img src="./assets/img/3.jpeg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -300,7 +300,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="swing_tower.html"><img src="./assets/img/1.jpeg" alt="#" class="img-fluid"></a>
+                            <a href="swing_tower.html"><img src="./assets/img/1.jpeg" alt="#" loading="lazy" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -324,7 +324,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="otrio_tri-ring.html"><img src="./assets/img/home_game-5.jpg" alt="#"
+                            <a href="otrio_tri-ring.html"><img src="./assets/img/home_game-5.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -337,7 +337,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="alpha_numeric.html"><img src="./assets/img/home_game-6.jpg" alt="#"
+                            <a href="alpha_numeric.html"><img src="./assets/img/home_game-6.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -350,7 +350,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="triggle_chess.html"><img src="./assets/img/home_game-7.jpg" alt="#"
+                            <a href="triggle_chess.html"><img src="./assets/img/home_game-7.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -363,7 +363,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="frog_tree.html"><img src="./assets/img/5.jpeg" alt="#" class="img-fluid"></a>
+                            <a href="frog_tree.html"><img src="./assets/img/5.jpeg"  loading="lazy"alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -387,7 +387,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="jumping_pogo.html"><img src="./assets/img/home_game-9.jpg" alt="#"
+                            <a href="jumping_pogo.html"><img src="./assets/img/home_game-9.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -400,7 +400,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="jumping_pogo.html"><img src="./assets/img/home_game-10.jpg" alt="#"
+                            <a href="jumping_pogo.html"><img src="./assets/img/home_game-10.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -413,7 +413,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="wooden_table.html"><img src="./assets/img/home_game-11.jpg" alt="#"
+                            <a href="wooden_table.html"><img src="./assets/img/home_game-11.jpg" alt="#"  loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -426,7 +426,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="jumping_pogo.html"><img src="./assets/img/4.jpeg" alt="#" class="img-fluid"></a>
+                            <a href="jumping_pogo.html"><img src="./assets/img/4.jpeg" alt="#" loading="lazy" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -450,7 +450,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="xylophone_musical.html"><img src="./assets/img/home_game-13.jpg" alt="#"
+                            <a href="xylophone_musical.html"><img src="./assets/img/home_game-13.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -463,7 +463,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="xylophone_musical.html"><img src="./assets/img/home_game-14.jpg" alt="#"
+                            <a href="xylophone_musical.html"><img src="./assets/img/home_game-14.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -476,7 +476,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="infinity_smart.html"><img src="./assets/img/home_game-15.jpg" alt="#"
+                            <a href="infinity_smart.html"><img src="./assets/img/home_game-15.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -489,7 +489,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="xylophone_musical.html"><img src="./assets/img/3.jpeg" alt="#"
+                            <a href="xylophone_musical.html"><img src="./assets/img/3.jpeg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -514,7 +514,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="magic_beans.html"><img src="./assets/img/home_game-1.jpg" alt="#"
+                            <a href="magic_beans.html"><img src="./assets/img/home_game-1.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -527,7 +527,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="shape_matching.html"><img src="./assets/img/7.jpeg" alt="#" class="img-fluid"></a>
+                            <a href="shape_matching.html"><img src="./assets/img/7.jpeg" alt="#"  loading="lazy"class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -539,7 +539,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="starlink_educational.html"><img src="./assets/img/home_game-19.jpeg" alt="#"
+                            <a href="starlink_educational.html"><img src="./assets/img/home_game-19.jpeg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -552,7 +552,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="iq_game.html"><img src="./assets/img/home_game-20.png" alt="#"
+                            <a href="iq_game.html"><img src="./assets/img/home_game-20.png" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -577,7 +577,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="baby_rattles.html"><img src="./assets/img/home_game-21.webp" alt="#"
+                            <a href="baby_rattles.html"><img src="./assets/img/home_game-21.webp" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -590,7 +590,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="baby's_first.html"><img src="./assets/img/home_game-22.jpg" alt="#"
+                            <a href="baby's_first.html"><img src="./assets/img/home_game-22.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -603,7 +603,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="baby_rattles.html"><img src="./assets/img/home_game-23.webp" alt="#"
+                            <a href="baby_rattles.html"><img src="./assets/img/home_game-23.webp" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -616,7 +616,7 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="shape_matching.html"><img src="./assets/img/home_game-24.jpg" alt="#"
+                            <a href="shape_matching.html"><img src="./assets/img/home_game-24.jpg" alt="#" loading="lazy"
                                     class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
@@ -641,7 +641,7 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;"  alt="logo" loading="lazy"
                                 class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
